--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -20,16 +20,16 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q4 q4__content">
+          <div class="content">
+            <div class="skin child">固定</div>
+            <div class="pink child">可変</div>
+            <div class="sky child">固定</div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="content">
+            <div class="yellow child">可変</div>
+            <div class="red child">可変</div>
+            <div class="green child">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
