--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -20,16 +20,16 @@
         <!-- 回答はクラスq5の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q5">
-          <div>8</div>
-          <div>5</div>
-          <div>1</div>
-          <div>7</div>
-          <div>4</div>
-          <div>6</div>
-          <div>2</div>
-          <div>3</div>
-          <div>9</div>
+        <div class="q5 back">
+          <div class="pink square">8</div>
+          <div class="sky square">5</div>
+          <div class="skin square">1</div>
+          <div class="beige square">7</div>
+          <div class="kuri square">4</div>
+          <div class="cream square">6</div>
+          <div class="indigo square">2</div>
+          <div class="cyan square">3</div>
+          <div class="blue square">9</div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
