--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -25,8 +25,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
-                <p>text-align</p>
+              <div class="in__textalign">
+              <p class="inner inner__textalign">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -34,7 +34,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <p class="inner
+              in__margin">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -47,9 +48,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
-              <p>table</p>
+          <div class="q6 q6--around          q6__aroundtable">
+            <div class="q6__boxtable">
+              <p class="q6__table">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -58,7 +59,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q6 q6--around">
-            <p>flex</p>
+            <p class="q6__table">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
@@ -67,15 +68,15 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+              <p class="q6__box__inner  q6__Fixed">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
 
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+            <div class="q6__box is-flexible q6__flexbox">
+              <p class="q6__box__inner q6__variable">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
