--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -26,10 +26,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--float">
             <div class="q7__inner clearfix">
-              <div class="q7__box q7__left">
+              <div class="q7__box  q7_boxtext q7__left">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7__right">
+              <div class="q7__box q7_boxtext  q7__right">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -46,24 +46,16 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--table">
             <div class="q7__inner">
-              <table>
-                <tr>
-                  <th>
               <div class="q7__box q7__table__center">
-                <div class="q7__box__text">
+                <div class="q7__box__text q7_boxtext">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
-            </th>
-            <th>
-              <div class="q7__box">
-                <div class="q7__box__text">
+              <div class="q7__box q7__table__center">
+                <div class="q7__box__text q7_boxtext">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
                 </div>
               </div>
-            </th>
-            </tr>
-          </table>
             </div>
           </div>
           <!-- Q7の回答はここに書いてね -->
