--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -20,13 +20,12 @@
         <!-- 回答はクラスq3の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3">
-          <table class="
-          calorie">
-          <thead>
-            <tr>
-              <th>日付</th>
-              <th>朝ごはん</th>
-              <th>昼ごはん</th>
+          <table class="calorie">
+            <thead>
+              <tr>
+                <th>日付</th>
+                <th>朝ごはん</th>
+                <th>昼ごはん</th>
               <th>おやつ</th>
               <th>夜ご飯</th>
               <th>夜食</th>
@@ -41,14 +40,14 @@
               <th>舞茸丼</th>
               <th>いちご</th>
             </tr>
-        <tr>
-          <th>2016/04/02</th>
-          <th>なし</th>
-          <th>ケバブ丼</th>
-          <th>ゼリー</th>
-          <th>唐揚げ定食</th>
-          <th>いちご</th>
-        </tr>
+            <tr>
+              <th>2016/04/02</th>
+              <th>なし</th>
+              <th>ケバブ丼</th>
+              <th>ゼリー</th>
+              <th>唐揚げ定食</th>
+              <th>いちご</th>
+            </tr>
         <tr>
           <th>2016/04/03</th>
           <th>納豆ご飯</th>
