--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -34,13 +34,11 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p class="inner
-              in__margin">margin</p>
+              <p class="inner in__margin">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
         </div>
-
         <div class="box__inner">
           <h3 class="box__headline">
             <p class="box__headline__text">ー Q6-2 天地左右中央寄せ ー</p>
@@ -54,7 +52,6 @@
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
-
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
@@ -62,16 +59,14 @@
             <p class="q6__table">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
-
           <div class="q6 q6--position">
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-stable">
-              <p class="q6__box__inner  q6__Fixed">position固定</p>
+              <p class="q6__box__inner q6__Fixed">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
-
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
