--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -45,21 +45,22 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--table">
-            <div class="q7__inner">
+            <div class="q7__inner is__table">
               <div class="q7__box q7__table__center">
                 <div class="q7__box__text q7_boxtext">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
               <div class="q7__box q7__table__center">
-                <div class="q7__box__text q7_boxtext">
+                <div class="q7__box__text  q7_boxtext q7__right">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
                 </div>
               </div>
             </div>
           </div>
-          <!-- Q7の回答はここに書いてね -->
         </div>
+          <!-- Q7の回答はここに書いてね -->
+
 
         <div class="box__inner">
           <h3 class="box__headline">
@@ -69,17 +70,18 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
-            <div class="q7__inner">
-              <div class="q7__box">
+            <div class="q7__inner q7__is__inline">
+              <div class="q7__box q7__3left q73__box q7_boxtext">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box">
+              <div class="q7__box q7__3right q73__box q7_boxtext">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
           </div>
-          <!-- Q7の回答はここに書いてね -->
         </div>
+          <!-- Q7の回答はここに書いてね -->
+
 
         <div class="box__inner">
           <h3 class="box__headline">
@@ -89,11 +91,11 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--flex">
-            <div class="q7__inner">
-              <div class="q7__box">
+            <div class="q7__inner q74__inner">
+              <div class="q7__box q74__box">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box">
+              <div class="q7__box q74__box">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -110,13 +112,13 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--margin">
             <div class="q7__inner is-full">
-              <div class="q7__box">
-                <div class="q7__box__text">
+              <div class="q7__box q75__box q75__left">
+                <div class="q7__box__text q75__box__text q75__box__left">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
-              <div class="q7__box">
-                <div class="q7__box__text">
+              <div class="q7__box q75__box q75__right">
+                <div class="q7__box__text q75__box__text q75__box__right">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                 </div>
               </div>
