--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -16,8 +16,8 @@
       <h2 class="headline">
         <p class="headline__text">Q7. 横並び</p>
       </h2>
-      <div class="box q7__wrapper">
-        <div class="box__inner">
+      <div class="box q7__wrapper q7box__wrapper">
+        <div class="box__inner ">
           <h3 class="box__headline">
             <p class="box__headline__text">ー Q7-1 floatでの横並び ー</p>
           </h3>
@@ -25,11 +25,11 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--float">
-            <div class="q7__inner clearfix">
-              <div class="q7__box  q7_boxtext q7__left">
+            <div class="q7__inner q7__box__inner clearfix">
+              <div class="q7__box q7_boxtext q7__left">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7_boxtext  q7__right">
+              <div class="q7__box q7_boxtext q7__left">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -44,14 +44,14 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--table">
-            <div class="q7__inner is__table">
+            <div class="q7__inner  q7__box__inner is__table">
               <div class="q7__box q7__table__center">
                 <div class="q7__box__text q7_boxtext">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
               <div class="q7__box q7__table__center">
-                <div class="q7__box__text  q7_boxtext q7__right">
+                <div class="q7__box__text q7_boxtext q7__right">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
                 </div>
               </div>
@@ -67,11 +67,11 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
-            <div class="q7__inner q7__is__inline">
-              <div class="q7__box q7__3left q73__box q7_boxtext">
+            <div class="q7__inner q7__box__inner q7__is__inline clearfix">
+              <div class="q7__box  q73__box q7_boxtext">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7__3right q73__box q7_boxtext">
+              <div class="q7__box  q73__box q7_boxtext">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -86,7 +86,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--flex">
-            <div class="q7__inner q74__inner">
+            <div class="q7__inner q7__box__inner q74__inner">
               <div class="q7__box q74__box">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
@@ -97,7 +97,6 @@
           </div>
           <!-- Q7の回答はここに書いてね -->
         </div>
-
         <div class="box__inner">
           <h3 class="box__headline">
             <p class="box__headline__text">ー Q7-5 inline-blockとmarginでの横並び ー</p>
@@ -106,7 +105,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--margin">
-            <div class="q7__inner is-full">
+            <div class="q7__inner q7__box__inner is-full">
               <div class="q7__box q75__box q75__left">
                 <div class="q7__box__text q75__box__text q75__box__left">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
