--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -23,22 +23,22 @@
           </h3>
           <!-- 回答はクラスq8の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
-          <div class="q8">
+          <div class="q8 q8__wrapper">
             <img class="car__picture" src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q9/thumb.jpg" alt="車の写真">
             <div class="q8__text q82__text__box">
-            <div class="q8__1__text q82__text">
+              <div class="q82__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
               </div>
-          </div>
+            </div>
           <!-- 回答はクラスq8の要素の中に書いてね -->
-        </div>
+          </div>
         <div class="box__inner">
           <h3 class="box__headline">
             <p class="box__headline__text">ー Q8-2 animation ー</p>
           </h3>
           <!-- 回答はクラスq8の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
-          <div class="q8">
+          <div class="q8 q8__anime">
             <div class="loading">
             </div> 
           </div>
