--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -67,7 +67,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
-            <div class="q7__inner q7__box__inner q7__is__inline clearfix">
+            <div class="q7__inner q7__box__inner q7__is__inline">
               <div class="q7__box  q73__box q7_boxtext">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
